--- a/src/main/resources/article-template.html
+++ b/src/main/resources/article-template.html
@@ -8,7 +8,7 @@
         </th>
     </tr>
     <tr>
-        <td><h2><a href="xxxURLxxx">xxxTITLExxx</a></h2></td>
+        <td><h2><a name="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2></td>
     </tr>
     <tr>
         <td>
