--- a/src/main/resources/issue-template.html
+++ b/src/main/resources/issue-template.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Respekt</title>
     <style>
         .section{
         text-align: left
@@ -29,6 +29,9 @@
     </style>
 </head>
 <body>
+<h1>Obsah</h1>
+xxxTOCxxx
+
 xxxARTICLExxx
 </body>
 </html>
