Questions in interviews are in bold

--- a/src/main/resources/issue-template.html
+++ b/src/main/resources/issue-template.html
@@ -26,6 +26,9 @@
         font-family: "Arial";
         font-weight: bold;
         }
+        .detail-otazka {
+        font-weight: bold;
+        }
     </style>
 </head>
 <body>
