Figures, Pictures, script tags missing. Donwloading both articles and featured articles. Showing names of authors after the redesign of the web.

--- a/src/main/resources/issue-template.html
+++ b/src/main/resources/issue-template.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="Latin-1">
+    <meta charset="UTF-8">
     <title>Respekt</title>
     <style>
-        .section{
-        text-align: left
+        p, .TOCEntry, .section, .detail-mezititulek, h1, h3, h4, table, .detail-vykrik{
+            width: 80%;
+            max-width: 800px;
+            text-align: justify;
+            margin-left: 10%;
+        }
+        img, .iobject_placeholder {
+            align:left;
+            margin-left: 10%;
+            margin-right: 20px;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
         h2 {
-        color: black;
-        font-family: "Arial";
+            color: black;
+            font-family: "Arial";
         }
         a {
-        text-decoration: none;
-        color: #000000;
+            text-decoration: none;
+            color: #000000;
         }
         .date{
-        font-family: "Arial";
-        font-size:10px;
+            font-family: "Arial";
+            font-size:10px;
         }
         .detail-mezititulek{
-        font-weight: bold;
+            font-weight: bold;
         }
         .perex{
-        font-family: "Arial";
-        font-weight: bold;
+            font-family: "Arial";
+            font-weight: bold;
         }
         .detail-otazka {
-        font-weight: bold;
+            font-weight: bold;
+        }
+        .reklama {
+            visibility: collapse;
         }
     </style>
 </head>
