changed table removed SOURCE, SCRIPT, SVG created package naming of the issue removed unused css styles

--- a/src/main/resources/article-template.html
+++ b/src/main/resources/article-template.html
@@ -1,8 +1,8 @@
 <table>
     <tr>
         <th class="section">xxxSECTIONxxx</th>
-        <th rowspan="4">
-            <div class="author-image">
+        <th rowspan="3" valign="middle">
+            <div class="author">
                 xxxELEAUTHORxxx
             </div>
         </th>
@@ -16,7 +16,7 @@
         </td>
     </tr>
     <tr class="perex">
-        <td>
+        <td colspan="2">
             <div>xxxPEREXxxx
             </div>
         </td>
@@ -25,4 +25,3 @@
 <div class="text">
     xxxELETEXTxxx
 </div>
-
