--- a/src/main/resources/issue-template.html
+++ b/src/main/resources/issue-template.html
@@ -2,15 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Respekt</title>
+    <title>Respekt xxxIIxxx, xxxYYYYxxx</title>
     <style>
-        p, .TOCEntry, .section, .detail-mezititulek, h1, h3, h4, table, .detail-vykrik{
+        p, .TOCEntry, .section, h1, h3, h4, table{
             width: 80%;
             max-width: 800px;
             text-align: justify;
-            margin-left: 10%;
         }
-        img, .iobject_placeholder {
+        img{
             align:left;
             margin-left: 10%;
             margin-right: 20px;
@@ -29,18 +28,12 @@
             font-family: "Arial";
             font-size:10px;
         }
-        .detail-mezititulek{
-            font-weight: bold;
-        }
         .perex{
             font-family: "Arial";
             font-weight: bold;
         }
-        .detail-otazka {
-            font-weight: bold;
-        }
-        .reklama {
-            visibility: collapse;
+        .text {
+            text-align: justify;
         }
     </style>
 </head>
