Formatting changes of the title-author-section table

--- a/src/main/resources/article-template.html
+++ b/src/main/resources/article-template.html
@@ -1,25 +1,20 @@
 <table>
     <tr>
-        <th class="section">xxxSECTIONxxx</th>
-        <th rowspan="3" valign="middle">
-            <div class="author">
-                xxxELEAUTHORxxx
-            </div>
-        </th>
+        <th><h2><a name="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2></th>
     </tr>
     <tr>
-        <td><h2><a name="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2></td>
+        <td class="section">xxxSECTIONxxx</td>
     </tr>
     <tr>
+        <td class="section">xxxELEAUTHORxxx</td>
+    </tr>
+    <!--<tr>
         <td>
             <div class="date">xxxDATExxx</div>
         </td>
-    </tr>
+    </tr>-->
     <tr class="perex">
-        <td colspan="2">
-            <div>xxxPEREXxxx
-            </div>
-        </td>
+        <td>xxxPEREXxxx</td>
     </tr>
 </table>
 <div class="text">
