--- a/src/main/resources/issue-template.html
+++ b/src/main/resources/issue-template.html
@@ -9,6 +9,9 @@
             max-width: 800px;
             text-align: justify;
         }
+        .section, .author {
+            text-decoration: bold;
+        }
         img{
             align:left;
             margin-left: 10%;
@@ -16,7 +19,7 @@
             margin-top: 10px;
             margin-bottom: 10px;
         }
-        h2 {
+        h1 {
             color: black;
             font-family: "Arial";
         }
