Another bit of formatting

--- a/src/main/resources/article-template.html
+++ b/src/main/resources/article-template.html
@@ -1,22 +1,6 @@
-<table>
-    <tr>
-        <th><h2><a name="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2></th>
-    </tr>
-    <tr>
-        <td class="section">xxxSECTIONxxx</td>
-    </tr>
-    <tr>
-        <td class="section">xxxELEAUTHORxxx</td>
-    </tr>
-    <!--<tr>
-        <td>
-            <div class="date">xxxDATExxx</div>
-        </td>
-    </tr>-->
-    <tr class="perex">
-        <td>xxxPEREXxxx</td>
-    </tr>
-</table>
-<div class="text">
-    xxxELETEXTxxx
-</div>
+<h2><a name="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2>
+<div class="section">xxxSECTIONxxx</div>
+<div class="author">xxxELEAUTHORxxx</div>
+<p/>
+<div class="perex">xxxPEREXxxx</div>
+<div class="text">xxxELETEXTxxx</div>
