--- a/src/main/resources/article-template.html
+++ b/src/main/resources/article-template.html
@@ -1,6 +1,6 @@
-<h2><a name="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2>
+<h2><a id="xxxTOCTITLExxx" href="xxxURLxxx">xxxTITLExxx</a></h2>
 <div class="section">xxxSECTIONxxx</div>
 <div class="author">xxxELEAUTHORxxx</div>
-<p/>
+xxxNEXTxxx
 <div class="perex">xxxPEREXxxx</div>
 <div class="text">xxxELETEXTxxx</div>
